# wos4le-thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wos4le.cpp  wos4le_old.cpp
experiments/: cow1.csv  cow2.csv  cow3.csv  sphere1.csv  sphere2.csv  sphere3.csv
logs/: cow1.csv  cow2.csv  cow3.csv  sphere1.csv  sphere2.csv  sphere3.csv
